[package]
name = "spillestation"
version = "0.1.0"
edition = "2018"
resolver = "2"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
wgpu = { version = "0.11", features = [ "spirv" ] }
ultraviolet = "0.8.1"
bytemuck = { version = "1.7.2", features = [ "derive" ] }

