[package]
name = "spillestation"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.16"
egui_wgpu_backend = "0.16"
egui-winit = { version = "0.16", default-features = false, features = ["links"] }
winit = "0.26.0"
wgpu = { version = "0.12", features = [ "spirv" ] }
pollster = "0.2.4"
ultraviolet = { version = "0.8.1" }
bytemuck = { version = "1.7.2", features = [ "derive" ] }
env_logger = "0.9"
directories-next = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
native-dialog = "0.6.1"
thiserror = "*"
