[package]
name = "splst_core"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3

[profile.dev]
# This must be enabled to avoid copying from the stack when initializing heap arrays,
# since it can cause a stack overflow otherwise.
opt-level = 3

[dependencies]
splst_util = { path = "../splst_util" }
splst_cdimg = { path = "../splst_cdimg" }
splst_asm = { path = "../splst_asm" }

bytemuck = { version = "1.7.2", features = [ "derive" ] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "*"
log = "*"
