[package]
name = "splst_front"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
splst_core = { path = "../splst_core" }
splst_cdimg = { path = "../splst_cdimg" }

egui = "0.16"
egui_wgpu_backend = "0.16"
egui-winit = { version = "0.16", default-features = false, features = ["links"] }
winit = "0.26.0"
wgpu = { version = "0.12", features = [ "spirv" ] }
pollster = "0.2.4"
ultraviolet = { version = "0.8.1" }
bytemuck = { version = "1.7.2", features = [ "derive" ] }
directories-next = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
native-dialog = "0.6.1"

log = "*"
either = "*"
thiserror = "*"
